--- a/matrix-bot-workshop.tex
+++ b/matrix-bot-workshop.tex
@@ -91,8 +91,8 @@
 
         \item Robby
             \begin{itemize}
-                \item Graduated from Mines in 2019 with a bachelor's in EE.
-                \item Lives in Boulder and works at Xilinx
+                \item Graduated from Mines in 2019 with a bachelor's in EE and
+                    minor in CS.
             \end{itemize}
     \end{itemize}
 
@@ -219,15 +219,14 @@
 
 \section{Writing a Matrix Bot}
 
-\begin{frame}{Tools}
+\begin{frame}{Maubot}
     We will be showing you how to use Maubot, a Matrix bot framework by Tulir
     (one of Sumner's coworkers).
 
-    Maubot is a Python bot framework.
-\end{frame}
+    Maubot is a Python bot framework. It provides nice utilities on top of the
+    \texttt{mautrix-python} library. \pause
 
-\begin{frame}{Maubot Admin Panel}
-    You can log in to the following website:
+    \textbf{Admin Panel:} We have set up a maubot instance here:
 
     \begin{center}
         \Large
@@ -238,9 +237,52 @@
     Password: \texttt{matrixiscool}
 \end{frame}
 
+\begin{frame}[fragile]{General bot-writing workflow}
+    \textbf{Documentation:}
+    \url{https://docs.mau.fi/maubot/dev/getting-started.html}
+
+    \bigskip
+
+    \textbf{Install maubot} on your local machine:
+    \begin{minted}{shell}
+    pip3 install --user maubot
+    \end{minted}
+
+    \textbf{Writing your bot:}
+    \begin{itemize}
+        \item Run \texttt{mbc init} for interactive plugin creation.
+        \item Run \texttt{mbc login} to connect to the maubot instance.
+        \item After you write your code, upload it to the server with:
+            \begin{minted}{shell}
+                mbc build --upload
+            \end{minted}
+    \end{itemize}
+\end{frame}
+
 \begin{frame}[standout]
     \Huge
-    Questions?
+    Example: Echobot
+\end{frame}
+
+\begin{frame}[standout]
+    \Huge
+    Example: Firefighter bot
+\end{frame}
+
+\begin{frame}{Bot Ideas}
+    \textbf{Now it's your turn!} We recommend you start with something small (an
+    existing bot for example), then build up from there.
+
+    \begin{itemize}
+        \item Try writing a cooler echobot or a better reaction bot.
+        \item A bot that sends back ASCII-art of the given word or phrase.
+        \item A 20 questions bot.
+        \item A dice roll bot
+        \item Welcome bot that says hi to new users.
+        \item Upvote/downvote tracker bot that tracks the number of thumbs up
+            and thumbs down emojis that each user gets.
+        \item Any other ideas?
+    \end{itemize}
 \end{frame}
 
 \end{document}
