--- a/matrix-bot-workshop.tex
+++ b/matrix-bot-workshop.tex
@@ -93,6 +93,8 @@
             \begin{itemize}
                 \item Graduated from Mines in 2019 with a bachelor's in EE and
                     minor in CS.
+              \item Founder and admin of ohea.xyz, an internet collective
+                    (ask me if you want an ohea.xyz Matrix account).
             \end{itemize}
     \end{itemize}
 
@@ -276,6 +278,7 @@
     \begin{itemize}
         \item Try writing a cooler echobot or a better reaction bot.
         \item A bot that sends back ASCII-art of the given word or phrase.
+        \item A bot that applies a filter to images sent in a room.
         \item A 20 questions bot.
         \item A dice roll bot
         \item Welcome bot that says hi to new users.
