add a few details about the workflow

--- a/matrix-bot-workshop.tex
+++ b/matrix-bot-workshop.tex
@@ -254,10 +254,11 @@
     \begin{itemize}
         \item Run \texttt{mbc init} for interactive plugin creation.
         \item Run \texttt{mbc login} to connect to the maubot instance.
-        \item After you write your code, upload it to the server with:
-            \begin{minted}{shell}
-                mbc build --upload
-            \end{minted}
+        \item After you write your code, upload it to the server with: \\
+            \texttt{mbc build --upload}
+        \item Create a user for a client: \\
+            \texttt{mbc auth --register --homeserver argon.ohea.xyz --server argon}
+        \item Create a client and instance on the Maubot Manager.
     \end{itemize}
 \end{frame}
 
